--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,18 @@
 </head>
 <body>
 
-<%= yield %>
+  <div class=container">
+    <div class="user-badge">
+      <% if user_signed_in? %>
+        <%= link_to "Выход", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Вход", new_user_session_path %>
+        <%= link_to "Регистрация", new_user_registration_path %>
+      <% end %>
+    </div>
+
+    <%= yield %>
+  </div>
 
 </body>
 </html>
