--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,9 @@
 <h1>Добро пожаловать</h1>
+
+<% if user_signed_in? %>
+<p>
+  <%= link_to "Сообщения", messages_path %>
+  <%= link_to "Профиль", edit_user_registration_path %>
+  Ваш auth_key = <%= current_user.auth_key %>
+</p>
+<% end %>
