сделал отправку сообщений пользователю о новом сообщении

--- a/app/views/user_mailer/new_message_notification.text.erb
+++ b/app/views/user_mailer/new_message_notification.text.erb
@@ -2,8 +2,8 @@
 ==========================
 
 Здравствуйте,
-Имя: <%= message.name %>
-Телефон: <%= message.phone %>
-Email: <%= message.email %>
+Имя: <%= @message.name %>
+Телефон: <%= @message.phone %>
+Email: <%= @message.email %>
 
-<%= message.content %>
+<%= @message.content %>
